@@ -51,4 +51,5 @@
     <string id="30048">%s of %s items loaded from search, please wait...</string>
     <string id="30049">Loading %s items in this folder, please wait...</string>
     <string id="30050">Loading %s items from search, please wait...</string>
+    <string id="30051">When playing videos, set the subtitle file located next to the video (.srt)</string>
 </strings>
